add a flder logo factorizing

--- a/doc/conferences/20170127_YSLRWinterWorkshop/poster.tex
+++ b/doc/conferences/20170127_YSLRWinterWorkshop/poster.tex
@@ -103,10 +103,10 @@
 %\setlength\fboxrule{0.5pt}
 \vspace{5mm}
 \begin{minipage}[l]{14em}
-	\includegraphics[height=4em]{bscLogo.jpg}\\
+	\includegraphics[height=4em]{../../logos/bscLogo.jpg}\\
 	\vfill
 
-	\includegraphics[height=4em]{img/upf_word_imp.jpg}
+	\includegraphics[height=4em]{../../logos/upf_word_imp.jpg}
     \end{minipage}
 }
 
@@ -230,8 +230,8 @@ This preliminary study shows how the use of simulation and model testing tools s
     \small
     Funding for this work was provided by the ERC Advanced Grant EPNet (340828).
     \begin{center}
-	\includegraphics[width=3cm]{epnetLogo.png}
-	\includegraphics[width=2.5cm]{LOGO-ERC.jpg}
+	\includegraphics[width=3cm]{../../logos/epnetLogo.png}
+	\includegraphics[width=2.5cm]{../../logos/LOGO-ERC.jpg}
     \end{center}
 } 
 
