old stuff on EHBEA abstract that where send and added by another way

--- a/doc/conferences/20170406_EHBEA/abstract.tex
+++ b/doc/conferences/20170406_EHBEA/abstract.tex
@@ -1,25 +1,48 @@
 %%Abstract based on the abstract use for the Young Researcher in Social Learning
-\documentclass[a4paper,10pt]{report}
+\documentclass[a4paper,10pt]{paper}
 \usepackage{graphicx}
 
 
 \begin{document}
-\section*{Impact of cultural learning mechanisms on the emergence of a Walrasian Equilibrium}
+
+\section*{Authors: Simon Carrignon \& Xavier Rubio-Campillo}
+
+\section*{Title: Impact of different social learning mechanisms on the emergence of a Walrasian Equilibrium}
 
 \section{Objectives}
-The aims of this study is to test how different social learning mechanisms can lead a simple artificail society to an 
+The aim of this study is to model different social learning mechanisms and see how they allow or not a simple society to find an economic equilibrium.
 
 \section{Methods}
-We explore here a model previously build to study the co-evolution between cultural mechanisms and economy. In this original model, groups of agents produce, consume and exchange goods. They learn and adapt the strategies they use to exchange goods by copying the strategies of more successful agents in the population.
+We use a model already developed to study the co-evolution of culture and economy. In this model, groups of agents produce, consume and exchange goods. They learn and adapt their trading strategy by randomly changing it on their own, or by learning new one from someone else. 
 
-In this present study we explore this model using a variation of \emph{Approximate Bayesian Computation} (ABC). This variation of ABC,a los called Fitted to Optimized Outcome,  to explore the parameter space of the original model and to compare it to an ideal case where all exchange of goods are made under a well  know economic equilibrium: the  general equilibrium (also called Walrasian equilibrium). ABC allows us to compute how likely different social learning process are able to produce a system where the emergence of a Walrasian Equilibrum is possible. At the same time it allows us to quantify the likelihood of the emergence of such situation under different set of fixed and limited constraints derived from historical cases studies.
+We explore this model using a variation of \emph{Approximate Bayesian Computation} (ABC) called: Fit to Idealized Outcome. This method allows us to compute how likely different social learning process, under a wide range of parameters, are able to lead to an ``Idealized Output'' -- in our case a situation where all exchanges of goods are made under a well know economic equilibrium: the  general equilibrium, also called Walrasian equilibrium.
+
+The likelihood of leading to this equilibrium is measured with three different learning mechanisms (neutral, success biased, and frequency biased copy) under different sets of parameters (number of agents, number of goods, innovation and copy probabilities).
 
 \section{Results}
+
+Our simulations show that a neutral learning process cannot lead to any efficient equilibrium. In the other cases, an innovation process has to occur but at a relatively low rate in order to avoid harming the stability of the equilibrium. In most of the situations, the success biased learning mechanism remains the most likely to allow the emergence of the expected equilibrium.
 
 
 \section{Conclusion}
 
-
+This study shows that in a wide range of circumstances, a simple social learning process where people tend to copy the more successful, coupled with a relatively low innovation rate, are enough to lead a simple society toward an efficient economic equilibrium.
 
 
 \end{document}
+
+and the more people are interacting altogheter into the economy the more likely an efficient equilibrium will be found.
+Authors: Simon Carrignon \& Xavier Rubio-Campillo
+
+Title: Impact of different social learning mechanisms on the emergence of a Walrasian Equilibrium
+
+Objectives:The aim of this study is to model different social learning mechanisms and see how they allow or not a simple society to find an economic equilibrium.
+
+Method:We use a model already developed to study the co-evolution of culture and economy. In this model, groups of agents produce, consume and exchange goods. They learn and adapt their trading strategy by randomly changing it on their own, or by learning new one from someone else.  
+We explore this model using a variation of Approximate Bayesian Computation (ABC) that allow a fitting to idealized outcomes (FIO). We use this method to compute how likely different social learning process, under a wide range of parameters, are able to lead to an ideal situation where all exchange of goods are made under a well know economic equilibrium: the general equilibrium (also called Walrasian equilibrium).
+The likelihood of leading to this equilibrium is measured with three different learning mechanisms (neutral, success biased, and frequency biased copy) under different sets of parameters (number of agents, number of goods, innovation and copy probabilities).
+
+Results: Our simulations show that a neutral learning process cannot lead to any efficient equilibrium. In the other cases, an innovation process has to occur but at a relatively low  rate in order to avoid harming the stability of the equilibrium. In most of the situations, the success biased learning mechanism remains the most likely to allow the         emergence of the expected equilibrium.
+
+Conclusion: This study demonstrates that in a wide range of circumstances, a simple social learning process where people tend to copy the more successful, coupled with a relatively low          innovation rate, are enough to lead a simple society toward an efficient economic equilibrium.
+
