image fully copied and map for animation for JIP3

--- a/doc/conferences/20170209_JIPI/presentation.tex
+++ b/doc/conferences/20170209_JIPI/presentation.tex
@@ -1,6 +1,6 @@
 %% February 2017, 
 
-\documentclass[12pt, notes=show,handout]{beamer}
+\documentclass[12pt, notes=show]{beamer}
 \usetheme[width=0cm]{Goettingen}
 \usecolortheme{rose}
 \useoutertheme{default}
@@ -32,7 +32,7 @@
 
 \title{
 	JIPI 2017:\\
-	Culture changes \& Economic Equilibrium.
+	Cultural Evolution \& Economy.
 }
 
 \institute{9 Febrer}
@@ -45,13 +45,13 @@
 		\begin{column}{.3\textwidth}
 			\begin{center}
 				Barcelona Supercomputing Center	\\
-				\includegraphics[height=1cm]{images/bscLogo.jpg} \hspace{2cm}
+				\includegraphics[height=1cm]{../../logos/bscLogo.jpg} \hspace{2cm}
 			\end{center}
 		\end{column}
 		\begin{column}{.3\textwidth}
 			\begin{center}
 				Univ. Pompeu Fabra Complex System Lab.\\
-				\includegraphics[height=1cm]{images/upfLogo.jpeg} %declare logo image with an alias here 
+				\includegraphics[height=1cm]{../../logos/upf_word_imp.jpg} %declare logo image with an alias here 
 			\end{center}
 		\end{column}
 	\end{columns}
@@ -131,7 +131,7 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{A social traits an economic weight}
 	\begin{center}
 	    \only<1>{\includegraphics[width=.8\textwidth]{images/boubou1.png}}
 	    \only<2>{\includegraphics[width=.8\textwidth]{images/boubou2.png}}
@@ -162,71 +162,38 @@
     \end{center}
 \end{frame}
 
-\begin{frame}{Co-evolution of Economy and Culture}
-
-%How Simple Cultural Dynamics influence Economy That in turn will influence cultural dynamics.
-    \begin{center}
-	\includegraphics[width=\textwidth]{images/cooev.png}	
-    \end{center}
-
-\end{frame}
 
 \section{ABM Framework}
 
 
-\begin{frame}{A General Agent Based Framework }
-
-    Computer Model
+\begin{frame}{General Framework}
+    
     \begin{center}
 	\includegraphics[width=.8\textwidth]{images/cooev.png}	
     \end{center}
 \end{frame}
 
-\begin{frame}{Why Computer Model?}
+\begin{frame}{Computer Model}
     \vfill
-    Understand general dynamics and properties of such systems:
+    Agent Based Model
+    \begin{center}
+	\includegraphics[width=.5\textwidth]{images/cooev.png}	
+    \end{center}
     \vfill
 	\begin{itemize}
 	\item Different Cultural Mechanisms
     \vfill
 	\item Different Trade Assumption
     \vfill
+	\item Historical and Archaeological Evidences 
+    \vfill
 	\item Network Constraints
     \vfill
 	\item \dots
     \vfill
 	\end{itemize}
-    {\large Study Cultural evolution \textbf{is not} possible without archaeology studies}
-    \vspace{.5cm}
-    \uncover<2->{
-    \begin{center}
-	and
-    \end{center}
-    \vspace{.5cm}
-}
-
-\uncover<3>{    {\large Simulation as a tool to implement and test hypothesis made on Historical questions.}\\
-    \vspace{.5cm}
-	{\scriptsize(Carrignon et al., Model \& Simluation 7, May 2016, BCN)}
-    }
-	
 \end{frame}
 	
-
-\begin{frame}{Results: Economic Dynamic}
-    \begin{figure}[!h]
-	\centering
-	\begin{tabular}{ c c}
-	    Neutral Model & Trading Model \\
-	    \includegraphics[width=5cm]{images/ScoreEvolutionForRandom-G3N500.pdf}
-	    & \includegraphics[width=5cm]{images/ScoreEvolutionForTrade-G3N500.pdf}
-
-	\end{tabular}
-	\caption{Evolution of the score within the two different models for two typical run with 500 agents and 3 goods evolving during 10000 timestep.}%%
-	\label{fig:scoreEvol}
-    \end{figure}
-\end{frame}
-    
 
 
 \begin{frame}{Results: Economic Dynamics}
@@ -246,7 +213,7 @@
 		\Large
     Thank for you attention!\\
 %		What was the nature of Roman economy?\\
-		\includegraphics[width=2cm]{images/LOGO-ERC.jpg} \hfil	\includegraphics[width=3cm]{images/epnetLogo.png}\\
+		\includegraphics[width=2cm]{images/LOGO-ERC.jpg} \hfil	\includegraphics[width=3cm]{../../logos/epnetLogo.png}\\
 		\vspace{1cm}
 		\scriptsize
 			http://www.roman-ep.net/\\
