--- a/doc/administrative_doc/2017CCS_invitationsLetter/EmreLetter.tex
+++ b/doc/administrative_doc/2017CCS_invitationsLetter/EmreLetter.tex
@@ -47,8 +47,8 @@
 %	HEADER CONTENTS
 %----------------------------------------------------------------------------------------
 
-\logo{../../logos/smallSquareBSC.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
-%\logo{ccs.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
+%%\logo{../../logos/smallSquareBSC.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
+\logo{both.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
 
 \headerlineone{BARCELONA} % Top header line, leave blank if you only want the bottom line
 
